Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/T4739399.out
T4739399.java:18:64: compiler.err.type.var.may.not.be.followed.by.other.bounds
1 error
